# pdbtools

./: .gitignore  CMakeLists.txt  LICENSE  README  environment.yml  setup.py
example/pdb_preparation/: readme.txt
example/pdb_preparation/vgfr2/: list.txt
old/: fix_ligand.py  pdbtools_o.py
pdbtools/: ligand_tools.py  nwalign.py  pdbtools.py
script/: auto_box.sh  auto_run.sh  check_water.sh  cp_pdb.sh  dist.sh  dw.sh  dw_lig_ref.sh  fix.sh  gen_chain_list.py  pymol.sh  pymol_code.sh  readme.txt  rot.sh  split_chain.sh  split_ligand.sh
src/lib/: atom_constants.h  builtinscoring.cpp  result_info.cpp
src/main/: main.cpp
